Created build workflow

--- a/.github/workflows/web-store-build.yml
+++ b/.github/workflows/web-store-build.yml
@@ -1,1 +1,24 @@
+# Build pipeline for the web store
 
+name: Web Store Build
+
+on:
+    workflow_dispatch:
+
+jobs:
+    build:
+        name: 'Build and Publish'
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4.2.2
+            
+            - name: Restore
+              run: dotnet restore
+
+            - name: Build
+              run: dotnet build --configuration Release
+
+            - name: Publish
+              run: dotnet publish --configuration Release --output ./webstore      
