--- a/.github/workflows/web-store-build.yml
+++ b/.github/workflows/web-store-build.yml
@@ -21,4 +21,10 @@ jobs:
               run: dotnet build --configuration Release
 
             - name: Publish
-              run: dotnet publish --configuration Release --output ./webstore      
+              run: dotnet publish --configuration Release --output ./webstore
+              
+            - name: Upload Artifact
+              uses: actions/upload-artifact@v4.4.3
+              with:
+                  name: webstore
+                  path: ./webstore
