--- a/.github/workflows/web-store-build.yml
+++ b/.github/workflows/web-store-build.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@v4.2.2
             
             - name: Restore
-              run: dotnet restore
+              uses: zyactions/dotnet-restore@v1
 
             - name: Build
               run: dotnet build --configuration Release
