Added workspace to the restore action

--- a/.github/workflows/web-store-build.yml
+++ b/.github/workflows/web-store-build.yml
@@ -16,6 +16,8 @@ jobs:
             
             - name: Restore
               uses: zyactions/dotnet-restore@v1
+              with:
+                workspace: coolwebstore.sln
 
             - name: Build
               run: dotnet build --configuration Release
