--- a/.github/workflows/web-store-build.yml
+++ b/.github/workflows/web-store-build.yml
@@ -15,9 +15,7 @@ jobs:
               uses: actions/checkout@v4.2.2
             
             - name: Restore
-              uses: zyactions/dotnet-restore@v1
-              with:
-                workspace: coolwebstore.sln
+              run: dotnet restore
 
             - name: Build
               run: dotnet build --configuration Release
