--- a/.github/workflows/webstore-ci-cd.yml
+++ b/.github/workflows/webstore-ci-cd.yml
@@ -36,9 +36,7 @@ jobs:
     name: Deploy to Web App
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: webstore-prod
-
+    environment: 'production'
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
