on push to main

--- a/.github/workflows/webstore-ci-cd.yml
+++ b/.github/workflows/webstore-ci-cd.yml
@@ -3,7 +3,9 @@
 name: webstore-ci-cd
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:
   AZURE_WEBAPP_NAME: 'coolstore400'
